tests/snapshots/eval__rules__cannot_bind_print_result.snap
---
source: tests/eval.rs
expression: "run(\"var x = print(\\\"hi\\\")\")"
---
Err(
    EvalError {
        category: Type,
        message: "cannot bind an expressions that doesn't return a value",
        span: Span {
            start: 0,
            end: 19,
        },
        cause: None,
    },
)
