tests/snapshots/eval__rules__cannot_shadow_print.snap
---
source: tests/eval.rs
expression: "run(\"var print = 1\")"
---
Err(
    EvalError {
        category: Name,
        message: "cannot shadow builtin `print`",
        span: Span {
            start: 0,
            end: 13,
        },
        cause: None,
    },
)
