tests/snapshots/eval__rules__cannot_shadow_print_with_const.snap
---
source: tests/eval.rs
expression: "run(\"const print = 1\")"
---
Err(
    EvalError {
        category: Name,
        message: "cannot shadow builtin `print`",
        span: Span {
            start: 0,
            end: 15,
        },
        cause: None,
    },
)
