tests/snapshots/eval__rules__unknown_identifier.snap
---
source: tests/eval.rs
expression: "run(\"print(undefined_thing)\")"
---
Err(
    EvalError {
        category: Name,
        message: "unknown identifier `undefined_thing`",
        span: Span {
            start: 6,
            end: 21,
        },
        cause: None,
    },
)
